--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -2,4 +2,5 @@
 
 <p><%= movie.description %></p>
 
-<a href="/movies">Back to movies index</a>
+<a href="/movies">Back to movies index</a> |
+<a href="<%= `/movies/${movie.id}/edit`%>">Edit movie details</a>
