Added ability to create movies

--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -2,6 +2,8 @@
 
 <h1>All the movies</h1>
 
+<a href="/movies/new">Add a movie!</a>
+
 <% movies.forEach(movie => { %>
   <div class="movie">
     <h4>
