--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -3,4 +3,8 @@
 <p><%= movie.description %></p>
 
 <a href="/movies">Back to movies index</a> |
-<a href="<%= `/movies/${movie.id}/edit`%>">Edit movie details</a>
+<a href="<%= `/movies/${movie.id}/edit`%>">Edit movie details</a> |
+
+<form action="<%= `/movies/${movie.id}?_method=DELETE` %>" method="POST">
+  <input type="submit" value="Delete" />
+</form>
